# hello-world-input-plugin

./: CMakeLists.txt  Makefile  hello_datasource.hpp  hello_featureset.cpp
test/: CMakeLists.txt  unit.cpp
